[tool.poetry]
name = "bom-pipeline"
version = "0.1.0"
description = ""
authors = ["Christopher L. Crutchfield <ccrutchf@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wakepy = {git = "https://github.com/ccrutchf/wakepy", rev = "dev"}

[tool.poetry.dev-dependencies]
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
